include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gcalctool
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = figures/gcalctool_advanced_window.png     \
              figures/gcalctool_basic_window.png	\
              figures/gcalctool_financial_window.png	\
              figures/gcalctool_menu_symbol.png		\
              figures/gcalctool_scientific_window.png

DOC_LINGUAS = de es fr it ko oc pt_BR sv 

SUBDIRS = bg ja zh_CN zh_HK zh_TW
