@YELP_HELP_RULES@
HELP_ID = gnome-calculator

HELP_MEDIA = figures/logo32.png

HELP_FILES = absolute.page \
             base.page \
             boolean.page \
             complex.page \
             conv-base.page \
             conv-character.page \
             conv-currency.page \
             conv-length.page \
             conv-time.page \
             conv-weight.page \
             equation.page \
             factorial.page \
             factorize.page \
             financial.page \
             functions.page \
             index.page \
             keyboard.page \
             legal.xml \
             logarithm.page \
             modulus.page \
             mouse.page \
             number-display.page \
             percentage.page \
             power.page \
             scientific.page \
             superscript.page \
             trigonometry.page \
             variables.page

HELP_LINGUAS = bg ca cs de el es eu fi fr gl hu it ja ko lv oc pt_BR ro ru sl sv te zh_CN zh_HK zh_TW

DISTCLEANFILES = \
	Makefile.in
