gnome_calculator_help_pages = [
  'absolute.page',
  'base.page',
  'boolean.page',
  'complex.page',
  'conv-base.page',
  'conv-character.page',
  'conv-currency.page',
  'conv-length.page',
  'conv-time.page',
  'conv-weight.page',
  'equation.page',
  'factorial.page',
  'factorize.page',
  'financial.page',
  'functions.page',
  'history.page',
  'index.page',
  'keyboard.page',
  'legal.xml',
  'logarithm.page',
  'modulus.page',
  'mouse.page',
  'number-display.page',
  'percentage.page',
  'power.page',
  'scientific.page',
  'superscript.page',
  'trigonometry.page',
  'variables.page',
]

gnome_calculator_help_media = [
  'figures/logo32.png',
]

gnome_calculator_help_languages = [
  'bg',
  'ca',
  'cs',
  'de',
  'el',
  'es',
  'eu',
  'fi',
  'fr',
  'gl',
  'hu',
  'it',
  'ja',
  'ko',
  'lv',
  'oc',
  'pt',
  'pt_BR',
  'ro',
  'ru',
  'sl',
  'sv',
  'te',
  'zh_CN',
  'zh_HK',
  'zh_TW',
]

gnome.yelp(meson.project_name(),
  sources: gnome_calculator_help_pages,
  media: gnome_calculator_help_media,
  languages: gnome_calculator_help_languages
)
